--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ p {
 
 <!-- TOPO -->
 <div class="header">
-  <img src="EF2FE5D4-0F1C-4D9B-B51A-49A77219B003.jpeg">
+  <img src="EF2FE5D4-0F1C-4D9B-B51A-49A77219B003.jpg">
   <h1>Sabrina Brand - Psicóloga</h1>
   <p>Seja bem‑vindo(a). Atendimentos online e presenciais.</p>
 </div>
@@ -81,11 +81,11 @@ p {
 
 <!-- GALERIA DE FOTOS -->
 <div class="gallery">
-  <img src="ECDEC897-81A8-4DC6-B0B3-7BB2EB13AB05.jpeg">
-  <img src="ABBA1340-F047-4B07-BA66-58519D755ACD.jpeg">
-  <img src="6BF7E366-E406-463F-9572-8349629842C4.jpeg">
-  <img src="94A5556E-2EA0-48E2-BC55-E9C73920C356.jpeg">
-  <img src="440DF05A-834C-4CAA-9BBB-4E2E49611399.jpeg">
+  <img src="ECDEC897-81A8-4DC6-B0B3-7BB2EB13AB05.jpg">
+  <img src="ABBA1340-F047-4B07-BA66-58519D755ACD.jpg">
+  <img src="6BF7E366-E406-463F-9572-8349629842C4.jpg">
+  <img src="94A5556E-2EA0-48E2-BC55-E9C73920C356.jpg">
+  <img src="440DF05A-834C-4CAA-9BBB-4E2E49611399.jpg">
 </div>
 
 <!-- RODAPÉ -->
