--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ p {
 
 <!-- TOPO -->
 <div class="header">
-  <img src="SABRINA (11).JPEG">
+  <img src="SABRINA11.JPEG">
   <h1>Sabrina Brand - Psicóloga</h1>
   <p>Seja bem‑vindo(a). Atendimentos online e presenciais.</p>
 </div>
@@ -81,7 +81,7 @@ p {
 
 <!-- GALERIA DE FOTOS -->
 <div class="gallery">
-  <img src="SABRINA (12).JPEG">
+  <img src="SABRINA12.JPEG">
   </div>
 
 <!-- RODAPÉ -->
