--- a/index.html
+++ b/index.html
@@ -9,57 +9,72 @@ body {
   font-family: Arial, sans-serif;
   color: #333;
   margin: 0;
+  background-color: #f9f9f9;
 }
 .header {
   text-align: center;
   padding: 40px 20px;
+  background-color: #fff;
 }
 .header img {
-  max-width: 250px;
-  border-radius: 8px;
+  width: 180px;
+  height: 180px;
+  object-fit: cover;
+  border-radius: 50%;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 h1 {
   font-size: 2em;
+  margin-top: 20px;
 }
 p {
   font-size: 1.1em;
+  margin-top: 5px;
 }
 .buttons {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
   padding: 20px;
+  gap: 15px;
 }
 .buttons a {
-  padding: 15px 25px;
-  margin: 10px;
+  padding: 12px 20px;
   font-size: 1em;
   font-weight: bold;
   text-decoration: none;
   color: #fff;
   border-radius: 5px;
+  transition: background-color 0.3s ease;
 }
 .whatsapp { background-color: #25D366; }
 .instagram { background-color: #E1306C; }
 .email { background-color: #007BFF; }
 
+.buttons a:hover {
+  filter: brightness(1.1);
+}
+
 .gallery {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  padding: 30px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  gap: 20px;
+  padding: 40px;
+  background-color: #fff;
 }
 .gallery img {
-  max-width: 250px;
-  margin: 10px;
-  border-radius: 5px;
+  width: 100%;
+  height: 180px;
   object-fit: cover;
+  border-radius: 8px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
 }
 .footer {
   text-align: center;
   padding: 20px;
   font-size: 0.9em;
   color: #777;
+  background-color: #f1f1f1;
 }
 </style>
 </head>
@@ -67,7 +82,7 @@ p {
 
 <!-- TOPO -->
 <div class="header">
-  <img src="SABRINA11.JPEG">
+  <img src="sabrina11.jpeg" alt="Sabrina Brand">
   <h1>Sabrina Brand - Psicóloga</h1>
   <p>Seja bem‑vindo(a). Atendimentos online e presenciais.</p>
 </div>
@@ -81,8 +96,8 @@ p {
 
 <!-- GALERIA DE FOTOS -->
 <div class="gallery">
-  <img src="SABRINA12.JPEG">
-  </div>
+  <img src="sabrina12.jpeg" alt="Ambiente de atendimento">
+</div>
 
 <!-- RODAPÉ -->
 <div class="footer">
