--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ p {
 
 <!-- TOPO -->
 <div class="header">
-  <img src="SABRINA11.jpeg" alt="Sabrina Brand">
+  <img src="SABRINA11.JPEG" alt="Sabrina Brand">
   <h1>Sabrina Brand - Psicóloga</h1>
   <p>Seja bem‑vindo(a). Atendimentos online e presenciais.</p>
 </div>
@@ -96,7 +96,7 @@ p {
 
 <!-- GALERIA DE FOTOS -->
 <div class="gallery">
-  <img src="SABRINA12.jpeg" alt="Ambiente de atendimento">
+  <img src="SABRINA12.JPEG" alt="Ambiente de atendimento">
 </div>
 
 <!-- RODAPÉ -->
