--- a/index.html
+++ b/index.html
@@ -4,17 +4,39 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Sabrina Brand - Psicóloga</title>
+
+<!-- Font Awesome para ícones -->
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+/>
+
 <style>
+/* Background com gradiente suave */
 body {
   font-family: Arial, sans-serif;
   color: #333;
   margin: 0;
-  background-color: #f9f9f9;
+  background: linear-gradient(135deg, #d9f0ff, #ffffff);
+  min-height: 100vh;
+  position: relative;
+  overflow-x: hidden;
 }
+
+/* Camada semitransparente atrás do conteúdo */
+.container {
+  background-color: rgba(255, 255, 255, 0.95);
+  max-width: 900px;
+  margin: 40px auto;
+  border-radius: 12px;
+  box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+  padding: 30px 40px;
+}
+
+/* Header */
 .header {
   text-align: center;
-  padding: 40px 20px;
-  background-color: #fff;
+  padding-bottom: 20px;
 }
 .header img {
   width: 180px;
@@ -31,36 +53,46 @@ p {
   font-size: 1.1em;
   margin-top: 5px;
 }
+
+/* Botões */
 .buttons {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  padding: 20px;
+  padding: 20px 0;
   gap: 15px;
 }
 .buttons a {
-  padding: 12px 20px;
-  font-size: 1em;
-  font-weight: bold;
+  padding: 14px 28px;
+  font-size: 1rem;
+  font-weight: 600;
   text-decoration: none;
   color: #fff;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
+  border: none;
+  border-radius: 30px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s ease, box-shadow 0.3s ease;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 180px;
+  gap: 10px;
 }
 .whatsapp { background-color: #25D366; }
 .instagram { background-color: #E1306C; }
 .email { background-color: #007BFF; }
-
 .buttons a:hover {
-  filter: brightness(1.1);
+  transform: translateY(-2px);
+  box-shadow: 0 6px 18px rgba(0, 0, 0, 0.15);
+  filter: brightness(1.05);
 }
 
+/* Galeria */
 .gallery {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
   gap: 20px;
-  padding: 40px;
-  background-color: #fff;
+  padding: 40px 0 0 0;
 }
 .gallery img {
   width: 100%;
@@ -69,39 +101,48 @@ p {
   border-radius: 8px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
 }
+
+/* Rodapé */
 .footer {
   text-align: center;
-  padding: 20px;
+  padding: 20px 0 0 0;
   font-size: 0.9em;
   color: #777;
-  background-color: #f1f1f1;
 }
 </style>
 </head>
 <body>
 
-<!-- TOPO -->
-<div class="header">
-  <img src="SABRINA11.JPEG" alt="Sabrina Brand">
-  <h1>Sabrina Brand - Psicóloga</h1>
-  <p>Seja bem‑vindo(a). Atendimentos online e presenciais.</p>
-</div>
+<div class="container">
+  <!-- TOPO -->
+  <div class="header">
+    <img src="SABRINA11.JPEG" alt="Sabrina Brand">
+    <h1>Sabrina Brand - Psicóloga</h1>
+    <p>Seja bem‑vindo(a). Atendimentos online e presenciais.</p>
+  </div>
 
-<!-- BOTÕES DE CONTATO -->
-<div class="buttons">
-  <a class="whatsapp" href="https://wa.me/5521972655440" target="_blank">Fale comigo no WhatsApp</a>
-  <a class="instagram" href="https://www.instagram.com/psi_sabrinabrand" target="_blank">Me siga no Instagram</a>
-  <a class="email" href="mailto:sabrinaebrand@gmail.com">Envie‑me um e‑mail</a>
-</div>
+  <!-- BOTÕES DE CONTATO -->
+  <div class="buttons">
+    <a class="whatsapp" href="https://wa.me/5521972655440" target="_blank" rel="noopener noreferrer">
+      <i class="fab fa-whatsapp"></i> Fale comigo no WhatsApp
+    </a>
+    <a class="instagram" href="https://www.instagram.com/psi_sabrinabrand" target="_blank" rel="noopener noreferrer">
+      <i class="fab fa-instagram"></i> Me siga no Instagram
+    </a>
+    <a class="email" href="mailto:sabrinaebrand@gmail.com" rel="noopener noreferrer">
+      <i class="fas fa-envelope"></i> Envie‑me um e‑mail
+    </a>
+  </div>
 
-<!-- GALERIA DE FOTOS -->
-<div class="gallery">
-  <img src="SABRINA12.JPEG" alt="Ambiente de atendimento">
-</div>
+  <!-- GALERIA DE FOTOS -->
+  <div class="gallery">
+    <img src="SABRINA12.JPEG" alt="Ambiente de atendimento">
+  </div>
 
-<!-- RODAPÉ -->
-<div class="footer">
-  &copy; 2025 Sabrina Brand - Todos os direitos reservados
+  <!-- RODAPÉ -->
+  <div class="footer">
+    &copy; 2025 Sabrina Brand - Todos os direitos reservados
+  </div>
 </div>
 
 </body>
