--- a/index.html
+++ b/index.html
@@ -96,8 +96,9 @@ p {
 }
 .gallery img {
   width: 100%;
-  height: 180px;
-  object-fit: cover;
+  height: auto;           /* mantém a proporção */
+  max-height: 300px;      /* limita altura para não ficar gigante */
+  object-fit: contain;    /* mostra a imagem inteira sem cortar */
   border-radius: 8px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
 }
