--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 />
 
 <style>
-/* Background com gradiente suave */
 body {
   font-family: Arial, sans-serif;
   color: #333;
@@ -22,8 +21,6 @@ body {
   position: relative;
   overflow-x: hidden;
 }
-
-/* Camada semitransparente atrás do conteúdo */
 .container {
   background-color: rgba(255, 255, 255, 0.95);
   max-width: 900px;
@@ -32,8 +29,6 @@ body {
   box-shadow: 0 10px 30px rgba(0,0,0,0.1);
   padding: 30px 40px;
 }
-
-/* Header */
 .header {
   text-align: center;
   padding-bottom: 20px;
@@ -53,8 +48,6 @@ p {
   font-size: 1.1em;
   margin-top: 5px;
 }
-
-/* Botões */
 .buttons {
   display: flex;
   justify-content: center;
@@ -86,24 +79,7 @@ p {
   box-shadow: 0 6px 18px rgba(0, 0, 0, 0.15);
   filter: brightness(1.05);
 }
-
-/* Galeria */
-.gallery {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-  gap: 20px;
-  padding: 40px 0 0 0;
-}
-.gallery img {
-  width: 100%;
-  height: auto;           /* mantém a proporção */
-  max-height: 300px;      /* limita altura para não ficar gigante */
-  object-fit: contain;    /* mostra a imagem inteira sem cortar */
-  border-radius: 8px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
-}
-
-/* Rodapé */
+/* Retirado a galeria, então sem estilos dela */
 .footer {
   text-align: center;
   padding: 20px 0 0 0;
@@ -135,10 +111,7 @@ p {
     </a>
   </div>
 
-  <!-- GALERIA DE FOTOS -->
-  <div class="gallery">
-    <img src="SABRINA12.JPEG" alt="Ambiente de atendimento">
-  </div>
+  <!-- GALERIA REMOVIDA -->
 
   <!-- RODAPÉ -->
   <div class="footer">
@@ -148,3 +121,4 @@ p {
 
 </body>
 </html>
+
