--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1">
+<meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Sabrina Brand - Psicóloga</title>
 
 <!-- Font Awesome para ícones -->
@@ -12,93 +12,118 @@
 />
 
 <style>
-body {
-  font-family: Arial, sans-serif;
-  color: #333;
-  margin: 0;
-  background: linear-gradient(135deg, #d9f0ff, #ffffff);
-  min-height: 100vh;
-  position: relative;
-  overflow-x: hidden;
-}
-.container {
-  background-color: rgba(255, 255, 255, 0.95);
-  max-width: 900px;
-  margin: 40px auto;
-  border-radius: 12px;
-  box-shadow: 0 10px 30px rgba(0,0,0,0.1);
-  padding: 30px 40px;
-}
-.header {
-  text-align: center;
-  padding-bottom: 20px;
-}
-.header img {
-  width: 180px;
-  height: 180px;
-  object-fit: cover;
-  border-radius: 50%;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-}
-h1 {
-  font-size: 2em;
-  margin-top: 20px;
-}
-p {
-  font-size: 1.1em;
-  margin-top: 5px;
-}
-.buttons {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  padding: 20px 0;
-  gap: 15px;
-}
-.buttons a {
-  padding: 14px 28px;
-  font-size: 1rem;
-  font-weight: 600;
-  text-decoration: none;
-  color: #fff;
-  border: none;
-  border-radius: 30px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  transition: transform 0.2s ease, box-shadow 0.3s ease;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  min-width: 180px;
-  gap: 10px;
-}
-.whatsapp { background-color: #25D366; }
-.instagram { background-color: #E1306C; }
-.email { background-color: #007BFF; }
-.buttons a:hover {
-  transform: translateY(-2px);
-  box-shadow: 0 6px 18px rgba(0, 0, 0, 0.15);
-  filter: brightness(1.05);
-}
-/* Retirado a galeria, então sem estilos dela */
-.footer {
-  text-align: center;
-  padding: 20px 0 0 0;
-  font-size: 0.9em;
-  color: #777;
-}
+  /* Reset básico */
+  *, *::before, *::after {
+    box-sizing: border-box;
+  }
+  body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #fafafa;
+    color: #2c3e50;
+    margin: 0;
+    padding: 0;
+    line-height: 1.6;
+  }
+  .container {
+    max-width: 700px;
+    margin: 60px auto 40px auto;
+    padding: 40px 30px 50px 30px;
+    background-color: #ffffff;
+    box-shadow: 0 6px 18px rgba(0,0,0,0.1);
+    border-radius: 12px;
+    text-align: center;
+  }
+  .header img {
+    width: 140px;
+    height: 140px;
+    object-fit: cover;
+    border-radius: 50%;
+    box-shadow: 0 4px 12px rgba(44, 62, 80, 0.15);
+    margin-bottom: 24px;
+  }
+  h1 {
+    font-weight: 700;
+    font-size: 2.25rem;
+    margin-bottom: 12px;
+    letter-spacing: 0.04em;
+    color: #34495e;
+  }
+  p {
+    font-size: 1.15rem;
+    color: #7f8c8d;
+    margin-top: 0;
+    margin-bottom: 40px;
+  }
+  .buttons {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+    flex-wrap: wrap;
+  }
+  .buttons a {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 14px 28px;
+    border-radius: 30px;
+    font-weight: 600;
+    font-size: 1rem;
+    text-decoration: none;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    transition: all 0.3s ease;
+    min-width: 200px;
+  }
+  .buttons a i {
+    font-size: 1.3rem;
+  }
+  .whatsapp {
+    background-color: #25D366;
+    color: white;
+  }
+  .whatsapp:hover {
+    background-color: #1da851;
+  }
+  .instagram {
+    background: linear-gradient(45deg, #feda75, #fa7e1e, #d62976, #962fbf, #4f5bd5);
+    color: white;
+  }
+  .instagram:hover {
+    filter: brightness(1.1);
+  }
+  .email {
+    background-color: #3498db;
+    color: white;
+  }
+  .email:hover {
+    background-color: #2c80c9;
+  }
+  .footer {
+    margin-top: 60px;
+    font-size: 0.9rem;
+    color: #95a5a6;
+  }
+  /* Responsivo */
+  @media (max-width: 480px) {
+    .buttons a {
+      min-width: 100%;
+      justify-content: center;
+    }
+    .container {
+      margin: 30px 15px 30px 15px;
+      padding: 30px 20px 40px 20px;
+    }
+  }
 </style>
 </head>
 <body>
 
 <div class="container">
-  <!-- TOPO -->
   <div class="header">
-    <img src="SABRINA11.JPEG" alt="Sabrina Brand">
+    <img src="SABRINA11.JPEG" alt="Sabrina Brand" />
     <h1>Sabrina Brand - Psicóloga</h1>
     <p>Seja bem‑vindo(a). Atendimentos online e presenciais.</p>
   </div>
 
-  <!-- BOTÕES DE CONTATO -->
   <div class="buttons">
     <a class="whatsapp" href="https://wa.me/5521972655440" target="_blank" rel="noopener noreferrer">
       <i class="fab fa-whatsapp"></i> Fale comigo no WhatsApp
@@ -111,9 +136,6 @@ p {
     </a>
   </div>
 
-  <!-- GALERIA REMOVIDA -->
-
-  <!-- RODAPÉ -->
   <div class="footer">
     &copy; 2025 Sabrina Brand - Todos os direitos reservados
   </div>
@@ -121,4 +143,5 @@ p {
 
 </body>
 </html>
+
 
