--- a/index.html
+++ b/index.html
@@ -18,12 +18,23 @@
   }
   body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #fafafa;
     color: #2c3e50;
     margin: 0;
     padding: 0;
     line-height: 1.6;
+
+    /* Background profissional */
+    background: linear-gradient(135deg, #e0e7ef, #f8fafc);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+
+    /* Opcional: textura suave usando CSS (pode comentar se quiser) */
+    background-image:
+      linear-gradient(rgba(255,255,255,0.3) 1px, transparent 1px),
+      linear-gradient(90deg, rgba(255,255,255,0.3) 1px, transparent 1px);
+    background-size: 40px 40px;
   }
+
   .container {
     max-width: 700px;
     margin: 60px auto 40px auto;
@@ -143,5 +154,6 @@
 
 </body>
 </html>
+
 
 
