--- a/index.html
+++ b/index.html
@@ -1,159 +1,169 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Sabrina Brand - Psicóloga</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Sabrina Brand - Psicóloga</title>
 
-<!-- Font Awesome para ícones -->
-<link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-/>
+  <!-- Font Awesome para ícones -->
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+  />
 
-<style>
-  /* Reset básico */
-  *, *::before, *::after {
-    box-sizing: border-box;
-  }
-  body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #2c3e50;
-    margin: 0;
-    padding: 0;
-    line-height: 1.6;
-
-    /* Background profissional */
-    background: linear-gradient(135deg, #e0e7ef, #f8fafc);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-
-    /* Opcional: textura suave usando CSS (pode comentar se quiser) */
-    background-image:
-      linear-gradient(rgba(255,255,255,0.3) 1px, transparent 1px),
-      linear-gradient(90deg, rgba(255,255,255,0.3) 1px, transparent 1px);
-    background-size: 40px 40px;
-  }
-
-  .container {
-    max-width: 700px;
-    margin: 60px auto 40px auto;
-    padding: 40px 30px 50px 30px;
-    background-color: #ffffff;
-    box-shadow: 0 6px 18px rgba(0,0,0,0.1);
-    border-radius: 12px;
-    text-align: center;
-  }
-  .header img {
-    width: 140px;
-    height: 140px;
-    object-fit: cover;
-    border-radius: 50%;
-    box-shadow: 0 4px 12px rgba(44, 62, 80, 0.15);
-    margin-bottom: 24px;
-  }
-  h1 {
-    font-weight: 700;
-    font-size: 2.25rem;
-    margin-bottom: 12px;
-    letter-spacing: 0.04em;
-    color: #34495e;
-  }
-  p {
-    font-size: 1.15rem;
-    color: #7f8c8d;
-    margin-top: 0;
-    margin-bottom: 40px;
-  }
-  .buttons {
-    display: flex;
-    justify-content: center;
-    gap: 24px;
-    flex-wrap: wrap;
-  }
-  .buttons a {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    padding: 14px 28px;
-    border-radius: 30px;
-    font-weight: 600;
-    font-size: 1rem;
-    text-decoration: none;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-    transition: all 0.3s ease;
-    min-width: 200px;
-  }
-  .buttons a i {
-    font-size: 1.3rem;
-  }
-  .whatsapp {
-    background-color: #25D366;
-    color: white;
-  }
-  .whatsapp:hover {
-    background-color: #1da851;
-  }
-  .instagram {
-    background: linear-gradient(45deg, #feda75, #fa7e1e, #d62976, #962fbf, #4f5bd5);
-    color: white;
-  }
-  .instagram:hover {
-    filter: brightness(1.1);
-  }
-  .email {
-    background-color: #3498db;
-    color: white;
-  }
-  .email:hover {
-    background-color: #2c80c9;
-  }
-  .footer {
-    margin-top: 60px;
-    font-size: 0.9rem;
-    color: #95a5a6;
-  }
-  /* Responsivo */
-  @media (max-width: 480px) {
-    .buttons a {
-      min-width: 100%;
-      justify-content: center;
+  <style>
+    *, *::before, *::after {
+      box-sizing: border-box;
     }
+
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0;
+      color: #2c3e50;
+      line-height: 1.6;
+
+      /* 🎨 BACKGROUND PROFISSIONAL */
+      background: radial-gradient(circle at top center, #f0f4fb 0%, #d6e2f1 35%, #e6e9f0 100%);
+      background-attachment: fixed;
+    }
+
     .container {
-      margin: 30px 15px 30px 15px;
-      padding: 30px 20px 40px 20px;
+      max-width: 700px;
+      margin: 60px auto 40px auto;
+      padding: 40px 30px 50px 30px;
+      background-color: #ffffffcc; /* leve transparência */
+      backdrop-filter: blur(6px);
+      box-shadow: 0 6px 18px rgba(0,0,0,0.08);
+      border-radius: 16px;
+      text-align: center;
     }
-  }
-</style>
+
+    .header img {
+      width: 140px;
+      height: 140px;
+      object-fit: cover;
+      border-radius: 50%;
+      box-shadow: 0 4px 12px rgba(44, 62, 80, 0.15);
+      margin-bottom: 24px;
+    }
+
+    h1 {
+      font-weight: 700;
+      font-size: 2.2rem;
+      margin-bottom: 12px;
+      letter-spacing: 0.03em;
+      color: #2d3748;
+    }
+
+    p {
+      font-size: 1.15rem;
+      color: #586069;
+      margin-top: 0;
+      margin-bottom: 40px;
+    }
+
+    .buttons {
+      display: flex;
+      justify-content: center;
+      gap: 24px;
+      flex-wrap: wrap;
+    }
+
+    .buttons a {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      padding: 14px 28px;
+      border-radius: 30px;
+      font-weight: 600;
+      font-size: 1rem;
+      text-decoration: none;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      transition: all 0.3s ease;
+      min-width: 220px;
+    }
+
+    .buttons a i {
+      font-size: 1.2rem;
+    }
+
+    .whatsapp {
+      background-color: #25D366;
+      color: white;
+    }
+
+    .whatsapp:hover {
+      background-color: #1da851;
+    }
+
+    .instagram {
+      background: linear-gradient(45deg, #feda75, #fa7e1e, #d62976, #962fbf, #4f5bd5);
+      color: white;
+    }
+
+    .instagram:hover {
+      filter: brightness(1.1);
+    }
+
+    .email {
+      background-color: #3498db;
+      color: white;
+    }
+
+    .email:hover {
+      background-color: #2c80c9;
+    }
+
+    .footer {
+      margin-top: 60px;
+      font-size: 0.9rem;
+      color: #95a5a6;
+    }
+
+    @media (max-width: 480px) {
+      .buttons a {
+        min-width: 100%;
+        justify-content: center;
+      }
+
+      .container {
+        margin: 30px 15px;
+        padding: 30px 20px;
+      }
+    }
+  </style>
 </head>
+
 <body>
 
-<div class="container">
-  <div class="header">
-    <img src="SABRINA11.JPEG" alt="Sabrina Brand" />
-    <h1>Sabrina Brand - Psicóloga</h1>
-    <p>Seja bem‑vindo(a). Atendimentos online e presenciais.</p>
-  </div>
+  <div class="container">
+    <div class="header">
+      <img src="SABRINA11.JPEG" alt="Sabrina Brand" />
+      <h1>Sabrina Brand - Psicóloga</h1>
+      <p>Seja bem‑vindo(a). Atendimentos online e presenciais.</p>
+    </div>
 
-  <div class="buttons">
-    <a class="whatsapp" href="https://wa.me/5521972655440" target="_blank" rel="noopener noreferrer">
-      <i class="fab fa-whatsapp"></i> Fale comigo no WhatsApp
-    </a>
-    <a class="instagram" href="https://www.instagram.com/psi_sabrinabrand" target="_blank" rel="noopener noreferrer">
-      <i class="fab fa-instagram"></i> Me siga no Instagram
-    </a>
-    <a class="email" href="mailto:sabrinaebrand@gmail.com" rel="noopener noreferrer">
-      <i class="fas fa-envelope"></i> Envie‑me um e‑mail
-    </a>
-  </div>
+    <div class="buttons">
+      <a class="whatsapp" href="https://wa.me/5521972655440" target="_blank" rel="noopener noreferrer">
+        <i class="fab fa-whatsapp"></i> Fale comigo no WhatsApp
+      </a>
+      <a class="instagram" href="https://www.instagram.com/psi_sabrinabrand" target="_blank" rel="noopener noreferrer">
+        <i class="fab fa-instagram"></i> Me siga no Instagram
+      </a>
+      <a class="email" href="mailto:sabrinaebrand@gmail.com" rel="noopener noreferrer">
+        <i class="fas fa-envelope"></i> Envie‑me um e‑mail
+      </a>
+    </div>
 
-  <div class="footer">
-    &copy; 2025 Sabrina Brand - Todos os direitos reservados
+    <div class="footer">
+      &copy; 2025 Sabrina Brand - Todos os direitos reservados
+    </div>
   </div>
-</div>
 
 </body>
 </html>
+
 
 
 
