--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Sabrina Brand - Psicóloga</title>
+  <title>Sabrina Brand - Psicóloga clinica e Neuropsicóloga</title>
 
   <!-- Font Awesome para ícones -->
   <link
