--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
   <div class="container">
     <div class="header">
       <img src="SABRINA11.JPEG" alt="Sabrina Brand" />
-      <h1>Sabrina Brand - Psicóloga</h1>
+      <h1>Sabrina Brand - Psicóloga clinica e Neuropsicóloga</h1>
       <p>Seja bem‑vindo(a). Atendimentos online e presenciais.</p>
     </div>
 
