--- a/index.html
+++ b/index.html
@@ -2,84 +2,84 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Sabrina Brand - Psicóloga clinica e Neuropsicóloga</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Sabrina Brand - Psicóloga Clínica e Neuropsicóloga</title>
 
   <!-- Font Awesome para ícones -->
   <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
   />
+  <!-- Fonte profissional -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
   <style>
-    *, *::before, *::after {
+    * {
       box-sizing: border-box;
+      margin: 0;
+      padding: 0;
     }
 
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 0;
-      padding: 0;
-      color: #2c3e50;
-      line-height: 1.6;
-      background: radial-gradient(circle at top center, #f0f4fb 0%, #d6e2f1 35%, #e6e9f0 100%);
-      background-attachment: fixed;
+      font-family: 'Inter', sans-serif;
+      background: linear-gradient(to bottom, #f6f9fc, #e2e8f0);
+      color: #2d3748;
     }
 
     .container {
-      max-width: 900px; /* AUMENTADO para caber os 3 botões */
-      margin: 60px auto 40px auto;
-      padding: 40px 30px 50px 30px;
-      background-color: #ffffffcc;
-      backdrop-filter: blur(6px);
-      box-shadow: 0 6px 18px rgba(0,0,0,0.08);
+      max-width: 960px;
+      margin: 60px auto;
+      padding: 60px 40px;
+      background: #ffffff;
       border-radius: 16px;
+      box-shadow: 0 10px 40px rgba(0,0,0,0.06);
       text-align: center;
     }
 
     .header img {
       width: 140px;
       height: 140px;
-      object-fit: cover;
       border-radius: 50%;
-      box-shadow: 0 4px 12px rgba(44, 62, 80, 0.15);
+      object-fit: cover;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
       margin-bottom: 24px;
     }
 
     h1 {
+      font-size: 2rem;
       font-weight: 700;
-      font-size: 2.2rem;
       margin-bottom: 12px;
-      letter-spacing: 0.03em;
-      color: #2d3748;
+      color: #1a202c;
     }
 
     p {
-      font-size: 1.15rem;
-      color: #586069;
-      margin-top: 0;
+      font-size: 1.1rem;
+      color: #4a5568;
       margin-bottom: 40px;
     }
 
     .buttons {
       display: flex;
       justify-content: center;
-      gap: 24px;
+      gap: 20px;
       flex-wrap: wrap;
+      margin-top: 20px;
     }
 
     .buttons a {
       display: flex;
       align-items: center;
+      justify-content: center;
       gap: 10px;
-      padding: 14px 24px;
-      border-radius: 30px;
-      font-weight: 600;
+      padding: 14px 26px;
+      border-radius: 8px;
       font-size: 1rem;
+      font-weight: 600;
       text-decoration: none;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
       transition: all 0.3s ease;
-      min-width: 240px; /* Reduzido um pouco para caber lado a lado */
+      border: none;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.04);
+      min-width: 200px;
     }
 
     .buttons a i {
@@ -88,16 +88,16 @@
 
     .whatsapp {
       background-color: #25D366;
-      color: white;
+      color: #fff;
     }
 
     .whatsapp:hover {
-      background-color: #1da851;
+      background-color: #1ebe5d;
     }
 
     .instagram {
       background: linear-gradient(45deg, #feda75, #fa7e1e, #d62976, #962fbf, #4f5bd5);
-      color: white;
+      color: #fff;
     }
 
     .instagram:hover {
@@ -105,44 +105,43 @@
     }
 
     .email {
-      background-color: #3498db;
-      color: white;
+      background-color: #3182ce;
+      color: #fff;
     }
 
     .email:hover {
-      background-color: #2c80c9;
+      background-color: #256fc7;
     }
 
     .footer {
       margin-top: 60px;
       font-size: 0.9rem;
-      color: #95a5a6;
+      color: #a0aec0;
     }
 
     @media (max-width: 768px) {
       .buttons {
         flex-direction: column;
-        gap: 16px;
       }
+
       .buttons a {
-        min-width: 100%;
-        justify-content: center;
+        width: 100%;
       }
+
       .container {
-        margin: 30px 15px;
-        padding: 30px 20px;
+        margin: 30px 20px;
+        padding: 40px 25px;
       }
     }
   </style>
 </head>
-
 <body>
 
   <div class="container">
     <div class="header">
       <img src="SABRINA11.JPEG" alt="Sabrina Brand" />
-      <h1>Sabrina Brand - Psicóloga clinica e Neuropsicóloga</h1>
-      <p>Seja bem‑vindo(a). Atendimentos online e presenciais.</p>
+      <h1>Sabrina Brand - Psicóloga Clínica e Neuropsicóloga</h1>
+      <p>Seja bem‑vindo(a)! Atendimentos online e presenciais com empatia e profissionalismo.</p>
     </div>
 
     <div class="buttons">
@@ -158,12 +157,13 @@
     </div>
 
     <div class="footer">
-      &copy; 2025 Sabrina Brand - Todos os direitos reservados
+      &copy; 2025 Sabrina Brand – Todos os direitos reservados
     </div>
   </div>
 
 </body>
 </html>
+
 
 
 
