--- a/index.html
+++ b/index.html
@@ -113,6 +113,15 @@
       background-color: #256fc7;
     }
 
+    .agendar {
+      background-color: #805ad5;
+      color: #fff;
+    }
+
+    .agendar:hover {
+      background-color: #6b46c1;
+    }
+
     .footer {
       margin-top: 60px;
       font-size: 0.9rem;
@@ -154,6 +163,9 @@
       <a class="email" href="mailto:sabrinaebrand@gmail.com" rel="noopener noreferrer">
         <i class="fas fa-envelope"></i> E‑mail
       </a>
+      <a class="agendar" href="https://calendly.com/sabrinaebrand" target="_blank" rel="noopener noreferrer">
+        <i class="fas fa-calendar-alt"></i> Agendar Atendimento
+      </a>
     </div>
 
     <div class="footer">
@@ -163,6 +175,7 @@
 
 </body>
 </html>
+
 
 
 
