--- a/index.html
+++ b/index.html
@@ -3,37 +3,70 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Sabrina Brand - Psicóloga Clínica e Neuropsicóloga</title>
+  <title>Sabrina Brand - Psicóloga</title>
 
-  <!-- Font Awesome para ícones -->
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-  />
-  <!-- Fonte profissional -->
+  <!-- Ícones -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <!-- Fonte -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
   <style>
     * {
       box-sizing: border-box;
-      margin: 0;
-      padding: 0;
+      scroll-behavior: smooth;
     }
 
     body {
+      margin: 0;
       font-family: 'Inter', sans-serif;
-      background: linear-gradient(to bottom, #f6f9fc, #e2e8f0);
+      background: #f8fafc;
       color: #2d3748;
     }
 
+    /* Barra de navegação */
+    nav {
+      background: #ffffff;
+      position: fixed;
+      top: 0;
+      width: 100%;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+      z-index: 999;
+    }
+
+    nav ul {
+      list-style: none;
+      display: flex;
+      justify-content: center;
+      padding: 0;
+      margin: 0;
+    }
+
+    nav li {
+      margin: 0 20px;
+    }
+
+    nav a {
+      display: block;
+      padding: 16px;
+      text-decoration: none;
+      font-weight: 600;
+      color: #2d3748;
+      transition: color 0.2s ease;
+    }
+
+    nav a:hover {
+      color: #805ad5;
+    }
+
+    /* Container central */
     .container {
       max-width: 960px;
-      margin: 60px auto;
-      padding: 60px 40px;
-      background: #ffffff;
-      border-radius: 16px;
-      box-shadow: 0 10px 40px rgba(0,0,0,0.06);
-      text-align: center;
+      margin: 120px auto 60px auto;
+      padding: 0 20px;
+    }
+
+    section {
+      margin-bottom: 80px;
     }
 
     .header img {
@@ -42,132 +75,109 @@
       border-radius: 50%;
       object-fit: cover;
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      margin-bottom: 24px;
+      margin-bottom: 20px;
     }
 
-    h1 {
-      font-size: 2rem;
+    h1, h2 {
       font-weight: 700;
-      margin-bottom: 12px;
-      color: #1a202c;
+      color: #2d3748;
+      margin-bottom: 10px;
     }
 
     p {
       font-size: 1.1rem;
       color: #4a5568;
-      margin-bottom: 40px;
     }
 
+    /* Botões */
     .buttons {
       display: flex;
       justify-content: center;
-      gap: 20px;
       flex-wrap: wrap;
-      margin-top: 20px;
+      gap: 20px;
+      margin-top: 30px;
     }
 
     .buttons a {
       display: flex;
       align-items: center;
-      justify-content: center;
       gap: 10px;
-      padding: 14px 26px;
+      padding: 12px 24px;
       border-radius: 8px;
-      font-size: 1rem;
       font-weight: 600;
+      font-size: 1rem;
       text-decoration: none;
-      transition: all 0.3s ease;
-      border: none;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.04);
-      min-width: 200px;
-    }
-
-    .buttons a i {
-      font-size: 1.2rem;
-    }
-
-    .whatsapp {
-      background-color: #25D366;
       color: #fff;
+      transition: background-color 0.3s ease;
     }
 
-    .whatsapp:hover {
-      background-color: #1ebe5d;
-    }
-
-    .instagram {
-      background: linear-gradient(45deg, #feda75, #fa7e1e, #d62976, #962fbf, #4f5bd5);
-      color: #fff;
-    }
-
-    .instagram:hover {
-      filter: brightness(1.1);
-    }
-
-    .email {
-      background-color: #3182ce;
-      color: #fff;
-    }
-
-    .email:hover {
-      background-color: #256fc7;
-    }
-
-    .agendar {
-      background-color: #805ad5;
-      color: #fff;
-    }
-
-    .agendar:hover {
-      background-color: #6b46c1;
-    }
+    .whatsapp { background: #25D366; }
+    .instagram { background: linear-gradient(45deg, #feda75, #d62976, #4f5bd5); }
+    .email { background: #3182ce; }
+    .agendar { background: #805ad5; }
 
     .footer {
-      margin-top: 60px;
+      text-align: center;
       font-size: 0.9rem;
       color: #a0aec0;
-    }
-
-    @media (max-width: 768px) {
-      .buttons {
-        flex-direction: column;
-      }
-
-      .buttons a {
-        width: 100%;
-      }
-
-      .container {
-        margin: 30px 20px;
-        padding: 40px 25px;
-      }
+      padding: 40px 0;
     }
   </style>
 </head>
 <body>
 
+  <!-- MENU -->
+  <nav>
+    <ul>
+      <li><a href="#inicio">Início</a></li>
+      <li><a href="#servicos">Serviços</a></li>
+      <li><a href="#avaliacoes">Avaliações</a></li>
+      <li><a href="#reflexoes">Reflexões</a></li>
+      <li><a href="#contato">Contato</a></li>
+    </ul>
+  </nav>
+
+  <!-- CONTEÚDO -->
   <div class="container">
-    <div class="header">
+
+    <!-- INÍCIO -->
+    <section id="inicio" class="header">
       <img src="SABRINA11.JPEG" alt="Sabrina Brand" />
       <h1>Sabrina Brand - Psicóloga Clínica e Neuropsicóloga</h1>
-      <p>Seja bem‑vindo(a)! Atendimentos online e presenciais com empatia e profissionalismo.</p>
-    </div>
+      <p>Seja bem-vindo(a)! Atendimentos online e presenciais com ética e empatia.</p>
+    </section>
 
-    <div class="buttons">
-      <a class="whatsapp" href="https://wa.me/5521972655440" target="_blank" rel="noopener noreferrer">
-        <i class="fab fa-whatsapp"></i> WhatsApp
-      </a>
-      <a class="instagram" href="https://www.instagram.com/psi_sabrinabrand" target="_blank" rel="noopener noreferrer">
-        <i class="fab fa-instagram"></i> Instagram
-      </a>
-      <a class="email" href="mailto:sabrinaebrand@gmail.com" rel="noopener noreferrer">
-        <i class="fas fa-envelope"></i> E‑mail
-      </a>
-      <a class="agendar" href="https://calendly.com/sabrinaebrand" target="_blank" rel="noopener noreferrer">
-        <i class="fas fa-calendar-alt"></i> Agendar Atendimento
-      </a>
-    </div>
+    <!-- SERVIÇOS -->
+    <section id="servicos">
+      <h2>Serviços</h2>
+      <p>Atendimento psicológico para adultos, adolescentes e crianças. Avaliações neuropsicológicas, acompanhamento emocional e orientação familiar.</p>
+    </section>
 
+    <!-- AVALIAÇÕES -->
+    <section id="avaliacoes">
+      <h2>Avaliações</h2>
+      <p>Realização de testes padronizados para avaliação cognitiva, comportamental e emocional, com laudos técnicos para fins clínicos, escolares e jurídicos.</p>
+    </section>
+
+    <!-- REFLEXÕES -->
+    <section id="reflexoes">
+      <h2>Reflexões</h2>
+      <p>Espaço para compartilhar textos e pensamentos sobre saúde mental, autoconhecimento, empatia, e bem-estar emocional.</p>
+    </section>
+
+    <!-- CONTATO -->
+    <section id="contato">
+      <h2>Contato</h2>
+      <p>Entre em contato ou agende uma consulta nos canais abaixo:</p>
+      <div class="buttons">
+        <a class="whatsapp" href="https://wa.me/5521972655440" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp</a>
+        <a class="instagram" href="https://www.instagram.com/psi_sabrinabrand" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
+        <a class="email" href="mailto:sabrinaebrand@gmail.com"><i class="fas fa-envelope"></i> E‑mail</a>
+        <a class="agendar" href="https://calendly.com/sabrinaebrand" target="_blank"><i class="fas fa-calendar-alt"></i> Agendar Atendimento</a>
+      </div>
+    </section>
+
+    <!-- RODAPÉ -->
     <div class="footer">
       &copy; 2025 Sabrina Brand – Todos os direitos reservados
     </div>
