--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <!-- Ícones -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <!-- Fonte -->
+  <!-- Fonte elegante -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
   <style>
@@ -19,46 +19,45 @@
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
-      background: #f8fafc;
+      background: #f9fafb;
       color: #2d3748;
     }
 
-    /* Barra de navegação */
+    /* Menu de navegação */
     nav {
-      background: #ffffff;
+      background: #fff;
       position: fixed;
       top: 0;
       width: 100%;
       box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-      z-index: 999;
+      z-index: 1000;
     }
 
     nav ul {
       list-style: none;
       display: flex;
       justify-content: center;
-      padding: 0;
       margin: 0;
+      padding: 0;
     }
 
     nav li {
-      margin: 0 20px;
+      margin: 0 18px;
     }
 
     nav a {
       display: block;
-      padding: 16px;
+      padding: 18px 0;
       text-decoration: none;
       font-weight: 600;
       color: #2d3748;
-      transition: color 0.2s ease;
+      transition: color 0.3s;
     }
 
     nav a:hover {
-      color: #805ad5;
+      color: #6b46c1;
     }
 
-    /* Container central */
     .container {
       max-width: 960px;
       margin: 120px auto 60px auto;
@@ -67,6 +66,10 @@
 
     section {
       margin-bottom: 80px;
+    }
+
+    .header {
+      text-align: center;
     }
 
     .header img {
@@ -80,8 +83,11 @@
 
     h1, h2 {
       font-weight: 700;
-      color: #2d3748;
       margin-bottom: 10px;
+    }
+
+    h1 {
+      font-size: 2rem;
     }
 
     p {
@@ -89,12 +95,11 @@
       color: #4a5568;
     }
 
-    /* Botões */
     .buttons {
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
-      gap: 20px;
+      gap: 16px;
       margin-top: 30px;
     }
 
@@ -108,13 +113,30 @@
       font-size: 1rem;
       text-decoration: none;
       color: #fff;
-      transition: background-color 0.3s ease;
+      transition: all 0.3s ease;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.05);
+    }
+
+    .buttons a i {
+      font-size: 1.1rem;
     }
 
     .whatsapp { background: #25D366; }
-    .instagram { background: linear-gradient(45deg, #feda75, #d62976, #4f5bd5); }
+    .whatsapp:hover { background: #1ebe5b; }
+
+    .instagram {
+      background: linear-gradient(45deg, #feda75, #d62976, #4f5bd5);
+    }
+
+    .instagram:hover {
+      filter: brightness(1.1);
+    }
+
     .email { background: #3182ce; }
-    .agendar { background: #805ad5; }
+    .email:hover { background: #256bb1; }
+
+    .agendar { background: #6b46c1; }
+    .agendar:hover { background: #5936a6; }
 
     .footer {
       text-align: center;
@@ -122,8 +144,25 @@
       color: #a0aec0;
       padding: 40px 0;
     }
+
+    @media (max-width: 768px) {
+      nav ul {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      nav li {
+        margin: 8px 0;
+      }
+
+      .buttons {
+        flex-direction: column;
+        gap: 12px;
+      }
+    }
   </style>
 </head>
+
 <body>
 
   <!-- MENU -->
@@ -181,13 +220,7 @@
     <div class="footer">
       &copy; 2025 Sabrina Brand – Todos os direitos reservados
     </div>
-  </div>
 
+  </div>
 </body>
 </html>
-
-
-
-
-
-
