--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
   <!-- Ícones -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <!-- Fonte elegante -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <!-- Fonte profissional -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
 
   <style>
     * {
@@ -19,13 +19,14 @@
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
-      background: #f9fafb;
+      background: linear-gradient(135deg, #e8edf5, #dbe7f0, #f7fafd);
+      background-attachment: fixed;
       color: #2d3748;
     }
 
-    /* Menu de navegação */
     nav {
-      background: #fff;
+      background: #ffffffee;
+      backdrop-filter: blur(8px);
       position: fixed;
       top: 0;
       width: 100%;
@@ -51,7 +52,7 @@
       text-decoration: none;
       font-weight: 600;
       color: #2d3748;
-      transition: color 0.3s;
+      transition: color 0.3s ease;
     }
 
     nav a:hover {
@@ -61,7 +62,11 @@
     .container {
       max-width: 960px;
       margin: 120px auto 60px auto;
-      padding: 0 20px;
+      padding: 40px;
+      background: rgba(255, 255, 255, 0.9);
+      backdrop-filter: blur(6px);
+      border-radius: 16px;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
     }
 
     section {
@@ -84,6 +89,7 @@
     h1, h2 {
       font-weight: 700;
       margin-bottom: 10px;
+      color: #2d3748;
     }
 
     h1 {
@@ -158,6 +164,11 @@
       .buttons {
         flex-direction: column;
         gap: 12px;
+      }
+
+      .container {
+        margin: 100px 20px 40px 20px;
+        padding: 30px 20px;
       }
     }
   </style>
